@@ -526,3 +526,7 @@
 2011-07-29  Mike Blumenkrantz
 
         * Add eet_alias_get to return the destination name of an alias
+
+2011-09-15  Cedric Bail
+
+	* Add eet_data_xattr_cipher_get and eet_data_xattr_cipher_set.
